--- a/app.json
+++ b/app.json
@@ -27,8 +27,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./assets/manifest_1024.png",
+        "backgroundColor": "#000000"
       }
     },
     "web": {
